--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playwright-qatouch-reporter",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Playwright plugin allows you to push your test results into QATouch.",
   "main": "dist/index.js",
   "scripts": {
@@ -12,10 +12,10 @@
   },
   "keywords": [
     "Playwright",
-    "QA",
-    "Touch",
+    "Tester",
+    "QATouch",
     "Reporter",
-    "Plugin",
+    "Plugins",
     "Custom-Reporter"
   ],
   "author": "QA Touch",
